- Version 2.2.1 of jchart2d from former CVS.